# Traditional_RAG

Learn_RAG/: README.md  main.py  pyproject.toml
Learn_RAG/notebook/: document.ipynb
