[project]
name = "learn-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "huggingface-hub==0.20.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.3.0",
    "sentence-transformers==2.2.2",
    "transformers==4.36.2",
]
